feat: se agrego el filtrado de estudiantes por modalidad de practica
