# src/infrastructure/mappers/student/student.mapper.ts
@@ -4,8 +4,8 @@ export class StudentMapper {
 
     static studentEntityFromObject(object: { [key: string]: any }) {
 
-        const { modality } = object?.PracticeModel
-        const program  = object?.UniversityStudiesModel?.program
+        const modality  = object?.PracticeModel?.modality;
+        const program  = object?.UniversityStudiesModel?.program;
         
         const {
             _id,
@@ -41,7 +41,6 @@ export class StudentMapper {
         if (!eps) throw CustomError.badRequest('Missing eps');
         if (!email) throw CustomError.badRequest('Missing email');
         if (!city) throw CustomError.badRequest('Missing city');
-        if (!modality) throw CustomError.badRequest('Missing modality');
 
 
         return new StudentEntity(
