# src/presentation/student/personal-data/routes.ts
@@ -22,7 +22,7 @@ export class StudentRouter {
         router.post('/personal-data',middleware.existStudent, controller.register);
         router.patch('/personal-data/:cedula',middleware.notfoundStudent, controller.update);
         router.get('/personal-data/:id', controller.getStudentByIdUser);
-        router.get('/personal-data', controller.getAllStudents);
+        router.get('/personal-data/all/:modality', controller.getAllStudents);
         // router.get('/personal-data/:id', controller.delete);
 
         return router;
